...
          Container(
            child: signInVisible(),
          ),
          Visibility(
            visible: !isSignInVisible,
            child: ElevatedButton.icon(
              key: Key("SignIn_page"),
              icon: Icon(Icons.login),
              onPressed: () {
                Navigator.of(context).pushNamed("SignIn");
              },
              label: Text("Sign In"),
            ),
...
