...
          "SignIn": (context) => SignIn(),
          "CreateAccount": (context) => SignUp(),
          "AddRoom": (context) => AddRoom(),
          "RoomData": (context) => Room_Data(),
          "Genret_QR": (context) => GenerateQR(),
          "QR_Data": (context) => QR_Data(),
          "Profile": (context) => Profile_Data(),
          "Forget_Password": (context) => Forget_Password(),
          "Rating": (context) => Rate(),
          "Help": (context) => Help(),
        });
  }
}
...
